update LearnJava for Java 12